--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -837,7 +837,7 @@ ll solve(int n,int rt){
 
 \end{lstlisting}
 
-\subsection{O(N^3)二分图最大权匹配 KM}
+\subsection{KM}
 \begin{lstlisting}
 int n;
 ll G[N][N];
@@ -899,8 +899,8 @@ ll KM(){
 	rep(i,1,n) res+=G[i][px[i]];
 	return res;
 }
-
 \end{lstlisting}
+
 
 \subsection{差分约束}
 \begin{lstlisting}
