--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -234,6 +234,7 @@ int main(){
 	while(z--) solve();
 }
 \end{lstlisting}
+\newpage
 \subsection{头文件(Dallby)}
 \begin{lstlisting}
 #include<bits/stdc++.h>
@@ -272,7 +273,7 @@ int main(){
     return 0;
 }
 \end{lstlisting}
-
+\newpage
 \section{数学}
 
 \subsection{欧拉筛}
@@ -379,6 +380,7 @@ void FFT(int n,int m,CP *F,CP *G){
     DFT(F,-1);
 }
 \end{lstlisting}
+\newpage
 \subsubsection{NTT快速数论变换}
 \begin{lstlisting}
 const int SIZE=(1<<21)+5;
@@ -716,7 +718,37 @@ struct TwoSat{
 
 \subsection{最大团}
 \begin{lstlisting}
-//假了
+int mp[60][60];
+int n;
+int mx=0;//ans
+vector<int> tmp;
+bool check(int now){
+    bool fl=true;
+    for(int i=0;i<tmp.size();i++){
+        if(mp[tmp[i]][now]!=1||mp[now][tmp[i]]!=1){
+            fl=false ;
+            break;
+        }
+    }
+    return fl;
+}
+void dfs(int step){
+    if(step==n+1){
+        if(tmp.size()>mx){
+            mx=tmp.size();
+        }
+        return;
+    }
+    if(tmp.size()+n-step+1<=mx){
+        return;
+    }
+    if(check(step)){
+        tmp.push_back(step);
+        dfs(step+1);
+        tmp.pop_back();
+    }
+        dfs(step+1);
+}
 
 \end{lstlisting}
 
