--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -2359,7 +2359,35 @@ struct VectorHash {
 };
 unordered_set<vector<int>,VectorHash> st;
 \end{lstlisting}
-
+\subsection{对拍}
+\subsubsection{linux\&mac版}
+\begin{lstlisting}
+while true; do
+./3.exe>tmp.in #出数据
+./2.exe<tmp.in>tmp.out #被测程序
+./4.exe<tmp.in>tmp2.out #正确（暴力）程序
+if diff tmp.out tmp2.out; then #比较两个输出文件
+printf AC #结果相同显示AC
+else
+echo WA #结果不同显示WA，并退出
+cat tmp.in
+cat tmp.out tmp2.out
+exit 0
+fi #if的结束标志,与C语言相反，0为真
+done # while的结束标志
+\end{lstlisting}
+\subsubsection{windows版}
+\begin{lstlisting}
+@echo off  
+:loop  
+    rand.exe > in.txt
+    my.exe < in.txt > myout.txt
+    std.exe < in.txt > stdout.txt
+    fc myout.txt stdout.txt
+if not errorlevel 1 goto loop  
+pause
+goto loop
+\end{lstlisting}
 
 %==============================正文部分==============================%
 \end{document}
