--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -1398,30 +1398,6 @@ int main(){
     cout<<res<<endl;
 }
 \end{lstlisting}
-\subsection{ST表求RMQ}
-$O(nlog_n)$预处理，$O(1)$查询
-\begin{lstlisting}
-#define log(x) (31-__builtin_clz(x))
-const int MAXN = 1e5+10;
-const int LOGN = log(MAXN)/log(2)+5;
-int M[MAXN][LOGN]; 
-int a[MAXN];
-int z,m,n;
-void init(){//初始化，复杂度O(nlogn) 
-	for(int i=1;i<=n;i++) M[i][0]=i;//长度为1的区间最值是自己 
-	for(int j=1;j<=LOGN;j++){
-		for(int i=1;i<=n-(1<<j)+1;i++){
-			if(a[M[i][j-1]]<a[M[i+(1<<(j-1))][j-1]]) M[i][j] = M[i][j-1];//这里以最小值为例 
-			else M[i][j] = M[i+(1<<j-1)][j-1];
-		}
-	} 
-}
-int query(int l,int r){
-	int k = log(r-l+1)/log(2);//向下取整
-	if(a[M[l][k]]<a[M[r-(1<<k)+1][k]]) return M[l][k];
-	else return M[r-(1<<k)+1][k];
-}
-\end{lstlisting}
 
 \subsection{并查集系列}
 \subsubsection{普通并查集}
@@ -2044,7 +2020,8 @@ void solve(){
 \end{lstlisting}
 
 \subsection{字符串哈希}
-快速取子串哈希值
+
+\subsubsection{快速取子串哈希值}
 \begin{lstlisting}
 const int b = 131;//推荐的base，可以选其他质数
 void init(int n){//初始化 
@@ -2059,6 +2036,31 @@ ull get(int l, int r) {
     return h[r] - h[l-1]*pw[r-l+1];
 }
 \end{lstlisting}
+
+\subsubsection{双哈希}
+\begin{lstlisting}
+#define ull unsigned long long
+#define rep(i,a,b) for(int i=(a);i<=(b);i++)
+
+typedef pair<ull,ull> pll;
+const int MAXN = 1e4+5;
+const int M1 = 1e9+7;//第一个模数 
+const int M2 = 1e9+9;//第二个模数 
+const int b = 131;
+int n;
+pll a[MAXN];
+
+pll gethash(string s){
+	ull res1=0,res2=0;
+	int siz = s.length();
+	rep(i,0,siz-1){
+		res1=(res1*b%M1+s[i])%M1;//i位乘以b^i
+		res2=(res2*b%M2+s[i])%M2;//f(s)=Σ s[i] * b^i;
+	}
+	return make_pair(res1,res2);
+}
+\end{lstlisting}
+
 \subsection{后缀数组SA+LCP}
 LCP(i,j) 后缀i和后缀j的最长公共前缀
 \begin{lstlisting}
@@ -2253,6 +2255,148 @@ struct SAM{
 }sam;
 \end{lstlisting}
 \section{其他}
+
+\subsection{基础母函数求方案数}
+\begin{lstlisting}
+const int MAXN = 1e4;
+int c1[MAXN+1];
+int c2[MAXN+1];
+
+int main(){
+	int n;
+	while(cin>>n){ 
+		for(int i=0;i<=n;i++){//初始化 
+			c1[i]=0;
+			c2[i]=0;
+		}
+		for(int i=0;i<=n;i++){
+			c1[i]=1;//面值为一元的
+		}
+		for(int i=2;i<=n;i++){//枚举邮票的面值(一共有几组括号 
+			for(int j=0;j<=n;j++){//枚举左边次数为0到次数为n的项 
+				for(int k=0;j+k<=n;k+=i){//右边的乘过来，枚举放几枚
+				//次数大于n的就不用管了 
+					c2[j+k]+=c1[j];
+				}
+			}
+			for(int i=0;i<=n;i++){//最左边两个括号完成处理 
+				c1[i]=c2[i];//把c2算出来的值挪到左边作为下一次的左边 
+				c2[i]=0;//清空c2记录下一次括号相乘的结果 
+			}
+		}
+		cout<<c1[n]<<endl; 
+	} 
+} 
+\end{lstlisting}
+
+\subsection{ST表求RMQ}
+$O(nlog_n)$预处理，$O(1)$查询
+\begin{lstlisting}
+#define log(x) (31-__builtin_clz(x))
+const int MAXN = 1e5+10;
+const int LOGN = log(MAXN)/log(2)+5;
+int M[MAXN][LOGN]; 
+int a[MAXN];
+int z,m,n;
+void init(){//初始化，复杂度O(nlogn) 
+	for(int i=1;i<=n;i++) M[i][0]=i;//长度为1的区间最值是自己 
+	for(int j=1;j<=LOGN;j++){
+		for(int i=1;i<=n-(1<<j)+1;i++){
+			if(a[M[i][j-1]]<a[M[i+(1<<(j-1))][j-1]]) M[i][j] = M[i][j-1];//这里以最小值为例 
+			else M[i][j] = M[i+(1<<j-1)][j-1];
+		}
+	} 
+}
+int query(int l,int r){
+	int k = log(r-l+1)/log(2);//向下取整
+	if(a[M[l][k]]<a[M[r-(1<<k)+1][k]]) return M[l][k];
+	else return M[r-(1<<k)+1][k];
+}
+\end{lstlisting}
+
+\begin{lstlisting}
+
+\end{lstlisting}
+
+\subsection{CDQ分治三维偏序}
+\begin{lstlisting}
+#include<iostream>
+#include<algorithm>
+using namespace std;
+#define rep(i,a,b) for(int i=(a);i<=(b);i++)
+const int MAXN = 214514;
+struct node{
+    int a,b,c,cnt,ans;
+}s1[MAXN],s2[MAXN];
+int ans[MAXN];//存对每个d,f[i]==d的i数量
+int n,k,m;
+//树状数组
+int mx;
+int treec[MAXN];
+inline int lowbit(int x){return x&-x;}
+inline void add(int x,int t){
+    while(x<=mx) treec[x]+=t,x+=lowbit(x);
+}
+inline int query(int x){
+    int ret = 0;
+    while(x) ret+=treec[x],x-=lowbit(x);
+    return ret;
+}
+//cdq分治
+bool cmp1(node x,node y){//以a为关键字从小打到排序
+    if(x.a==y.a){
+        if(x.b==y.b) return x.c<y.c;
+        return x.b<y.b;
+    }
+    return x.a<y.a;
+}
+bool cmp2(node x,node y){//根据b排序,便只剩下c的顺序没有满足
+    if(x.b==y.b) return x.c<y.c;
+    return x.b<y.b;
+}
+void cdq(int l,int r){
+    if(l==r) return;
+    int mid = (l+r)>>1;
+    //处理前两种情况:ij同在左/右
+    cdq(l,mid);cdq(mid+1,r);
+    //处理第三种情况:i在左j在右
+    sort(s2+l,s2+mid+1,cmp2);
+    sort(s2+mid+1,s2+r+1,cmp2);
+    int pxj=l,pxi=mid+1;//双指针,对应pxi的移动把pxj插入树状数组中
+    for(pxi=mid+1;pxi<=r;pxi++){
+        while(s2[pxj].b<=s2[pxi].b&&pxj<=mid){
+            add(s2[pxj].c,s2[pxj].cnt);//带次数插入树状数组中
+            pxj++;
+        }
+        s2[pxi].ans+=query(s2[pxi].c);
+        //查询树状数组中c比他小的
+    }
+    rep(j,l,pxj-1) add(s2[j].c,-s2[j].cnt);//之前错在这里,注意只有pxj前面的才被加过,pxj没有
+    //遍历pxj走过的区间,清空树状数组
+}
+int main(){
+    cin>>n>>k;
+    m=0,mx=k;//树状数组的最大数字(类似权值线段树)
+    rep(i,1,n) cin>>s1[i].a>>s1[i].b>>s1[i].c;
+    sort(s1+1,s1+1+n,cmp1);//以a为关键字从小到大排序
+    int tmp=0;//当前这个项出现了几次
+    rep(i,1,n){//合并相同的项并且记录出现次数进cnt
+        tmp++;//当前项出现了几次
+        if(s1[i].a!=s1[i+1].a||s1[i].b!=s1[i+1].b||s1[i].c!=s1[i+1].c){//判断两个node是否不同
+            s2[++m]=s1[i];//m统计元素个数
+            s2[m].cnt = tmp;
+            tmp = 0;
+        }
+    }
+    cdq(1,m);//递归计算
+    //题目问的是f(x)=满足条件ij对数,对应每个x有几个,把结果存到ans[x]中
+    rep(i,1,m) ans[s2[i].ans+s2[i].cnt-1]+=s2[i].cnt;
+    //s2[i].cnt-1是这些数字自己之间满足的对数
+    rep(i,0,n-1) cout<<ans[i]<<endl;
+}
+//洛谷P3810陌上花开
+//https://www.luogu.com.cn/problem/P3810
+\end{lstlisting}
 
 \subsection{三分}
 \begin{lstlisting}
