--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -1661,6 +1661,179 @@ class tzy_tree
     }
 }tree;
 \end{lstlisting}
+\subsubsection{文艺平衡树}
+处理区间翻转问题
+\begin{lstlisting}
+struct Node{
+    int l,r;
+    int val,key;
+    int size;
+    bool reverse;//旋转的懒惰标记
+}fhq[MAXN];
+int cnt,root;
+mt19937 rnd(233);
+vector<int>res;//因为行的末尾不能有空格所以我先用一个vector存着
+inline int newnode(int val){
+    fhq[++cnt].val = val;
+    fhq[cnt].key = rnd();
+    fhq[cnt].size=1;
+    return cnt;
+}
+inline void update(int now){
+    fhq[now].size = fhq[fhq[now].l].size + fhq[fhq[now].r].size+1;
+}
+inline void pushdown(int now){
+//如果当前节点的儿子有可能之后被动到,就需要向下传递reverse
+    swap(fhq[now].l,fhq[now].r);
+    fhq[fhq[now].l].reverse^=1;//儿子的懒惰标记0变1,1变0
+    fhq[fhq[now].r].reverse^=1;
+    fhq[now].reverse = 0;//之前疑惑这里为什么不用取反^1的
+    //其实是因为如果now没有标记reverse,就不用执行pushdown
+}
+void split(int now,int siz,int &x,int &y){//按照大小分裂
+//有点类似取第k大getnum的操作
+    if(!now){x=y=0;return;}
+    if(fhq[now].reverse) pushdown(now);//之后分裂操作可能碰到儿子,所以要pushdown
+    if(fhq[fhq[now].l].size<siz){
+        x = now;
+        split(fhq[now].r,siz-fhq[fhq[now].l].size-1,fhq[now].r,y);
+    }
+    else{
+        y = now;
+        split(fhq[now].l,siz,x,fhq[now].l);
+    }
+    update(now);
+}
+int merge(int x,int y){
+    if(!x||!y) return x+y;
+    if(fhq[x].key<fhq[y].key){//这里其实用什么符号都行
+        if(fhq[x].reverse) pushdown(x);
+        fhq[x].r = merge(fhq[x].r,y);
+        update(x);
+        return x;
+    }
+    else{
+        if(fhq[y].reverse) pushdown(y);
+        fhq[y].l = merge(x,fhq[y].l);
+        update(y);
+        return y;
+    }
+}
+void reverse(int l,int r){//区间反转
+//拆成三段,(1,l-1),(l,r),(r+1,n);
+    int x,y,z;
+    split(root,l-1,x,y);
+    split(y,r-l+1,y,z);
+    fhq[y].reverse^=1;
+    root=merge(merge(x,y),z);    
+}
+void ldr(int now){//最后用中序遍历找到结果
+    if(!now) return;
+    if(fhq[now].reverse) pushdown(now);
+    ldr(fhq[now].l);
+    res.push_back(fhq[now].val);//推入结果的序列
+    ldr(fhq[now].r);
+}
+int main(){
+    int n,m;
+    cin>>n>>m;
+    rep(i,1,n) root = merge(root,newnode(i));//因为i一定比之前出现的都大才可以这样
+    int l,r;
+    while(m--){
+        cin>>l>>r;
+        reverse(l,r);
+    }
+    res.clear();
+    ldr(root);
+    int siz = res.size();
+    rep(i,0,siz-1){
+        cout<<res[i];
+        if(i!=siz-1) cout<<' ';
+    }
+    cout<<endl;
+}
+\end{lstlisting}
+\subsubsection{二逼平衡树}
+线段树套平衡树
+\begin{itemize}
+	\item 查询 k 在区间内的排名
+	\item 查询区间内排名为 k 的值
+	\item 修改某一位值上的数值
+	\item 查询 k 在区间内的前驱（前驱定义为严格小于x，且最大的数，若不存在输出 -2147483647）
+	\item 查询 k 在区间内的后继（后继定义为严格大于 x，且最小的数，若不存在输出 2147483647）
+\end{itemize}
+\begin{lstlisting}
+rbset(pii(int, int)) seg[maxn << 2];
+int date[maxn];
+unsigned int cnt = 0;
+void build(int pos, int l, int r)
+{
+   for (int i = l; i <= r; i++)
+      seg[pos].insert(MP(date[i], ++cnt));
+   if (l == r)
+      return;
+   int mid = (l + r) >> 1;
+   build(lson(pos), l, mid);
+   build(rson(pos), mid + 1, r);
+}
+void update(int pos, int l, int r, int x, int v)
+{
+   seg[pos].erase(seg[pos].lower_bound(MP(date[x], 0)));
+   seg[pos].insert(MP(v, ++cnt));
+   if (l == r)
+      return;
+   int mid = (l + r) >> 1;
+   if (x <= mid)
+      update(lson(pos), l, mid, x, v);
+   else
+      update(rson(pos), mid + 1, r, x, v);
+}
+int getrk(int pos, int l, int r, int ql, int qr, int k)
+{
+   if (ql <= l && qr >= r)
+      return seg[pos].order_of_key(MP(k, 0));
+   int ans = 0;
+   int mid = (l + r) >> 1;
+   if (ql <= mid)
+      ans += getrk(lson(pos), l, mid, ql, qr, k);
+   if (qr >= mid+1)
+      ans += getrk(rson(pos), mid + 1, r, ql, qr, k);
+   return ans;
+}
+int pre(int pos, int l, int r, int ql, int qr, int k)
+{
+   if (ql <= l && qr >= r)
+   {
+      auto tt = seg[pos].lower_bound(MP(k, 0));
+      if (tt == seg[pos].begin())
+         return -2147483647;
+      return (--tt)->first;
+   }
+   int ans = -2147483647;
+   int mid = l + r >> 1;
+   if (ql <= mid)
+      MAX(ans, pre(lson(pos), l, mid, ql, qr, k));
+   if (qr > mid)
+      MAX(ans, pre(rson(pos), mid + 1, r, ql, qr, k));
+   return ans;
+}
+int aft(int pos, int l, int r, int ql, int qr, int k){
+   if (ql <= l && qr >= r)
+   {
+      auto tt = seg[pos].lower_bound(MP(k + 1, 0));
+      if (tt == seg[pos].end())
+         return 2147483647;
+      return tt->first;
+   }
+   int ans = 2147483647;
+   int mid = (l + r) >> 1;
+   if (ql <= mid)
+      MIN(ans, aft(lson(pos), l, mid, ql, qr, k));
+   if (qr > mid)
+      MIN(ans, aft(rson(pos), mid + 1, r, ql, qr, k));
+   return ans;
+}
+\end{lstlisting}
 \subsection{KD tree}
 \begin{lstlisting}
 inline void updmin(int &x,int y){x=min(x,y);}
